--- a/C430_Linked_List_lab2/C430_Linked_List_lab2.vcxproj.filters
+++ b/C430_Linked_List_lab2/C430_Linked_List_lab2.vcxproj.filters
@@ -35,5 +35,13 @@
     <ClCompile Include="List.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ListEntry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="DataClass.cpp">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
