trying to implement Iterator into list.h

--- a/C430_Linked_List_lab2/C430_Linked_List_lab2.vcxproj
+++ b/C430_Linked_List_lab2/C430_Linked_List_lab2.vcxproj
@@ -85,6 +85,9 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
+    <Link>
+      <SubSystem>NotSet</SubSystem>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -121,8 +124,7 @@
     <ClInclude Include="ListEntry.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="List.cpp" />
-    <ClCompile Include="ListEntry.cpp" />
+    <ClCompile Include="Iterator.h" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
