--- a/C430_Linked_List_lab2/C430_Linked_List_lab2.vcxproj.filters
+++ b/C430_Linked_List_lab2/C430_Linked_List_lab2.vcxproj.filters
@@ -32,11 +32,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="List.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ListEntry.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Iterator.h">
+      <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
